govtool/mainnet/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: govtool-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
      - localhost
    secretName: tls-secret
  rules:
  - host: localhost
    http:
      paths:
      - path: /api-be(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: gt-backend-service
            port:
              number: 80
      - path: /api-md(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: gt-metadata-validation-service
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: gt-frontend-service
            port:
              number: 80
